@@ -1,5 +1,5 @@
 
-R Under development (unstable) (2020-03-03 r77889) -- "Unsuffered Consequences"
+R Under development (unstable) (2020-03-06 r77910) -- "Unsuffered Consequences"
 Copyright (C) 2020 The R Foundation for Statistical Computing
 Platform: x86_64-pc-linux-gnu (64-bit)
 
@@ -1865,35 +1865,6 @@ armed.forces
 > 
 > 
 > cleanEx()
-> nameEx("plot")
-> ### * plot
-> 
-> flush(stderr()); flush(stdout())
-> 
-> ### Name: plot
-> ### Title: Generic X-Y Plotting
-> ### Aliases: plot
-> ### Keywords: hplot
-> 
-> ### ** Examples
-> 
-> require(stats) # for lowess, rpois, rnorm
-> plot(cars)
-> lines(lowess(cars))
-> 
-> plot(sin, -pi, 2*pi) # see ?plot.function
-> 
-> ## Discrete Distribution Plot:
-> plot(table(rpois(100, 5)), type = "h", col = "red", lwd = 10,
-+      main = "rpois(100, lambda = 5)")
-> 
-> ## Simple quantiles/ECDF, see ecdf() {library(stats)} for a better one:
-> plot(x <- sort(rnorm(47)), type = "s", main = "plot(x, type = \"s\")")
-> points(x, cex = .5, col = "dark red")
-> 
-> 
-> 
-> cleanEx()
 > nameEx("plot.dataframe")
 > ### * plot.dataframe
 > 
@@ -1924,7 +1895,7 @@ armed.forces
 > 
 > ### Name: plot.default
 > ### Title: The Default Scatterplot Function
-> ### Aliases: plot.default
+> ### Aliases: plot.default plot
 > ### Keywords: hplot
 > 
 > ### ** Examples
@@ -2171,7 +2142,7 @@ N
 > points.default # to see how it calls "plot.xy(xy.coords(x, y), ...)"
 function (x, y = NULL, type = "p", ...) 
 plot.xy(xy.coords(x, y), type = type, ...)
-<bytecode: 0x1eb5db8>
+<bytecode: 0x5638cd02b950>
 <environment: namespace:graphics>
 > 
 > 
@@ -3041,7 +3012,7 @@ function (xy = 1, warn.log = TRUE)
     u <- par("usr")
     xy * c(u[2L] - u[1L], u[4L] - u[3L])/par("pin")
 }
-<bytecode: 0x363e3c0>
+<bytecode: 0x5638ce918050>
 <environment: namespace:graphics>
 > 
 > ## plot labels offset 0.12 inches to the right
@@ -3122,7 +3093,7 @@ function (xy = 1, warn.log = TRUE)
 > cleanEx()
 > options(digits = 7L)
 > base::cat("Time elapsed: ", proc.time() - base::get("ptime", pos = 'CheckExEnv'),"\n")
-Time elapsed:  4.014 0.051 4.083 0 0 
+Time elapsed:  2.59 0.426 2.466 0 0 
 > grDevices::dev.off()
 null device 
           1 
